--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
-  "name": "WildBeast",
+  "name": "RocketMan",
   "version": "4.5.0",
   "description": "A Discord Bot",
   "main": "DougBot.js",
   "maintainers": [
     {
-      "name": "Anthony Zaza",
-      "email": "tony@lemonmc.com"
+      "name": "websheriff",
+      "email": ""
     }
   ],
   "scripts": {
@@ -35,7 +35,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "bugsnag": "^1.9.0",
+    "bugsnag": "^1.12.2",
     "cleverbot.io": "^1.0.4",
     "discordie": "github:qeled/discordie#dev",
     "imgflipper": "^1.0.1",
